@@ -14,21 +14,19 @@
  */
 package org.bonitasoft.console.common.server.page;
 
+import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.Matchers.*;
 import static org.mockito.Mockito.*;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Properties;
 import java.util.Set;
 import javax.servlet.http.HttpServletRequest;
@@ -37,12 +35,12 @@ import groovy.lang.GroovyClassLoader;
 import org.apache.commons.io.IOUtils;
 import org.bonitasoft.console.common.server.page.extension.PageResourceProviderImpl;
 import org.bonitasoft.console.common.server.preferences.constants.WebBonitaConstantsUtils;
-import org.bonitasoft.console.common.server.preferences.properties.CompoundPermissionsMapping;
 import org.bonitasoft.console.common.server.preferences.properties.ConsoleProperties;
 import org.bonitasoft.console.common.server.preferences.properties.PropertiesWithSet;
-import org.bonitasoft.console.common.server.preferences.properties.ResourcesPermissionsMapping;
 import org.bonitasoft.engine.api.PageAPI;
+import org.bonitasoft.engine.api.PermissionAPI;
 import org.bonitasoft.engine.exception.AlreadyExistsException;
+import org.bonitasoft.engine.exception.BonitaException;
 import org.bonitasoft.engine.page.Page;
 import org.bonitasoft.engine.page.PageNotFoundException;
 import org.bonitasoft.engine.session.APISession;
@@ -69,12 +67,6 @@ public class CustomPageServiceTest {
 
     private CustomPageService customPageService;
 
-    @Mock
-    CompoundPermissionsMapping compoundPermissionsMapping;
-
-    @Mock
-    ResourcesPermissionsMapping resourcesPermissionsMapping;
-
     @Rule
     public ExpectedException expectedEx = ExpectedException.none();
 
@@ -86,6 +78,9 @@ public class CustomPageServiceTest {
 
     @Mock
     PageAPI pageAPI;
+
+    @Mock
+    PermissionAPI permissionAPI;
 
     @Mock
     private HttpServletRequest request;
@@ -104,12 +99,14 @@ public class CustomPageServiceTest {
     public TemporaryFolder temporaryFolder = new TemporaryFolder();
 
     @Before
-    public void before() throws IOException {
+    public void before() throws IOException, BonitaException {
         customPageService = spy(new CustomPageService());
         CustomPageService.clearCachedClassloaders();
         when(apiSession.getTenantId()).thenReturn(1L);
         doReturn(consoleProperties).when(customPageService).getConsoleProperties(apiSession);
         doReturn(webBonitaConstantUtils).when(customPageService).getWebBonitaConstantsUtils(apiSession);
+        doReturn(pageAPI).when(customPageService).getPageAPI(apiSession);
+        doReturn(permissionAPI).when(customPageService).getPermissionAPI(apiSession);
     }
 
     @Test
@@ -124,7 +121,6 @@ public class CustomPageServiceTest {
                 any(CustomPageDependenciesResolver.class), any(BDMClientDependenciesResolver.class));
 
         when(mockedPage.getLastModificationDate()).thenReturn(new Date(0L));
-        doReturn(pageAPI).when(customPageService).getPageAPI(apiSession);
         when(pageAPI.getPageByName("")).thenReturn(mockedPage);
 
         // When
@@ -195,17 +191,15 @@ public class CustomPageServiceTest {
 
         final File pagePropertiesFile = File.createTempFile(PAGE_PROPERTIES, ".tmp");
         IOUtils.write(fileContent.getBytes(), new FileOutputStream(pagePropertiesFile));
-        doReturn(new HashSet<>(List.of("Organization Visualization"))).when(resourcesPermissionsMapping)
-                .getPropertyAsSet("GET|identity/user");
-        doReturn(new HashSet<>(Arrays.asList("Organization Visualization", "Organization Managment")))
-                .when(resourcesPermissionsMapping).getPropertyAsSet("PUT|identity/user");
+        doReturn(Set.of("Application Visualization")).when(permissionAPI).getResourcePermissions("GET|identity/user");
+        doReturn(Set.of("Organization Visualization", "Organization Management")).when(permissionAPI).getResourcePermissions("PUT|identity/user");
 
         // When
         final Set<String> customPagePermissions = customPageService.getCustomPagePermissions(new PropertiesWithSet(pagePropertiesFile),
-                resourcesPermissionsMapping);
+                apiSession);
 
         // Then
-        assertThat(customPagePermissions).contains("Organization Visualization", "Organization Managment");
+        assertThat(customPagePermissions).contains("Organization Visualization", "Organization Management", "Application Visualization");
     }
 
     @Test
@@ -216,36 +210,33 @@ public class CustomPageServiceTest {
 
         final File pagePropertiesFile = File.createTempFile(PAGE_PROPERTIES, ".tmp");
         IOUtils.write(fileContent.getBytes(), new FileOutputStream(pagePropertiesFile));
-        doReturn(new HashSet<>(List.of("Organization Visualization"))).when(resourcesPermissionsMapping)
-                .getPropertyAsSet("GET|identity/user");
-        doReturn(new HashSet<>(Arrays.asList("Organization Visualization", "Organization Managment")))
-                .when(resourcesPermissionsMapping).getPropertyAsSet("PUT|identity/user");
+        doReturn(Set.of("Application Visualization")).when(permissionAPI).getResourcePermissions("GET|identity/user");
+        doReturn(Set.of("Organization Visualization", "Organization Management")).when(permissionAPI).getResourcePermissions("PUT|identity/user");
 
         // When
         final Set<String> customPagePermissions = customPageService.getCustomPagePermissions(new PropertiesWithSet(pagePropertiesFile),
-                resourcesPermissionsMapping);
+                apiSession);
 
         // Then
-        assertThat(customPagePermissions).contains("<GET|unknown/resource>", "Organization Visualization",
-                "Organization Managment");
+        assertThat(customPagePermissions).contains("<GET|unknown/resource>", "Organization Visualization", "Application Visualization",
+                "Organization Management");
     }
 
     @Test
     public void should_get_Custom_Page_permissions_to_CompoundPermissions_with_empty_list() throws Exception {
         // Given
-        final String fileContent = "name=customPage1\n" +
-                "resources=[]";
+        final String fileContent = "name=customPage1\nresources=[]";
 
         final File pagePropertiesFile = File.createTempFile(PAGE_PROPERTIES, ".tmp");
         IOUtils.write(fileContent.getBytes(), new FileOutputStream(pagePropertiesFile));
-        doReturn(Collections.emptySet()).when(resourcesPermissionsMapping).getPropertyAsSet("GET|unknown/resource");
+        doReturn(emptySet()).when(permissionAPI).getResourcePermissions("GET|unknown/resource");
 
         // When
         final Set<String> customPagePermissions = customPageService.getCustomPagePermissions(new PropertiesWithSet(pagePropertiesFile),
-                resourcesPermissionsMapping);
+                apiSession);
 
         // Then
-        assertTrue(customPagePermissions.equals(new HashSet<String>()));
+        assertEquals(customPagePermissions, new HashSet<String>());
     }
 
 
@@ -394,37 +385,6 @@ public class CustomPageServiceTest {
                 restAPIContext);
         RestApiResponseAssert.assertThat(restApiResponse).as("should return result").hasResponse("RestResource.groovy!")
                 .hasNoAdditionalCookies().hasHttpStatus(200);
-    }
-
-    @Test
-    public void should_remove_api_extension_permissions() throws Exception {
-        //given
-        final File propertyFile = new File(getClass().getResource(PAGE_PROPERTIES).toURI());
-        doReturn(pageResourceProvider).when(customPageService).getPageResourceProvider(eq(mockedPage), anyLong());
-        doReturn(propertyFile).when(pageResourceProvider).getResourceAsFile(anyString());
-        doNothing().when(customPageService).ensurePageFolderIsUpToDate(apiSession, pageResourceProvider);
-
-        //when
-        customPageService.removeRestApiExtensionPermissions(resourcesPermissionsMapping, pageResourceProvider);
-
-        //then
-        verify(resourcesPermissionsMapping).removeProperty("GET|extension/restApiGet");
-        verify(resourcesPermissionsMapping).removeProperty("POST|extension/restApiPost");
-    }
-
-    @Test
-    public void should_remove_no_permissions() throws Exception {
-        //given
-        final File propertyFile = new File(getClass().getResource(PAGE_NO_API_EXTENSION_PROPERTIES).toURI());
-        doReturn(pageResourceProvider).when(customPageService).getPageResourceProvider(eq(mockedPage), anyLong());
-        doReturn(propertyFile).when(pageResourceProvider).getResourceAsFile(anyString());
-        doNothing().when(customPageService).ensurePageFolderIsUpToDate(apiSession, pageResourceProvider);
-
-        //when
-        customPageService.removeRestApiExtensionPermissions(resourcesPermissionsMapping, pageResourceProvider);
-
-        //then
-        verifyZeroInteractions(resourcesPermissionsMapping);
     }
 
     @Test
